// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<button
  className="src-components-button-index__default src-components-button-index__button"
  onClick={[Function]}
  type="button"
>
  <span
    className="src-components-button-index__content"
  >
    <div
      id="child"
    />
  </span>
</button>
`;

exports[`should render correctly when disabled 1`] = `
<button
  className="src-components-button-index__disabled src-components-button-index__button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="src-components-button-index__content"
  >
    <div
      id="child"
    />
  </span>
</button>
`;

exports[`should render correctly when submitting 1`] = `
<button
  className="src-components-button-index__submitting src-components-button-index__button"
  onClick={[Function]}
  type="button"
>
  <span
    className="src-components-button-index__content"
  >
    <div
      id="child"
    />
  </span>
  <Loader
    size="medium"
    type="inverse"
  />
</button>
`;
